[gd_scene load_steps=22 format=2]

[ext_resource path="res://Enemies/SoftCollision.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/bug/bug.png" type="Texture" id=3]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/Stats/Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/Hearts/Heart.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/WanderControl.tscn" type="PackedScene" id=8]
[ext_resource path="res://Effects/whiteShader.shader" type="Shader" id=13]
[ext_resource path="res://Player/Hurtbox/Hurtbox.tscn" type="PackedScene" id=14]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=15]
[ext_resource path="res://Enemies/bug/Bug.gd" type="Script" id=16]
[ext_resource path="res://Player/Hitbox/HitboxEnemy.gd" type="Script" id=17]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 13 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 5.91637

[sub_resource type="CircleShape2D" id=7]
radius = 6.11381

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Bug:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Bug:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="OccluderPolygon2D" id=10]
polygon = PoolVector2Array( -5.79113, -8.44276, -4.90625, -8.94419, -3.49044, -10.1535, -1.95664, -10.596, -0.983273, -10.596, 0.580019, -10.596, 2.2318, -10.183, 3.47063, -9.56361, 4.79796, -8.76722, 5.09292, -7.76435, 4.94544, -6.70249, 4.09005, -5.78812, 1.64188, -5.61114, 0.19657, -5.31618, -2.19261, -5.37517, -4.25734, -6.20106, -5.82063, -7.17443 )

[node name="BugShadowless" type="KinematicBody2D"]
pause_mode = 1
position = Vector2( 544, -40 )
collision_layer = 16
script = ExtResource( 16 )
MAX_SPEED = 37
dropHeart = true
heart = ExtResource( 7 )
FRICTION = 125

[node name="Bug" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( -0.0787468, 0.0787449 )
frames = SubResource( 5 )
animation = "idle"
playing = true
offset = Vector2( 0, -12 )

[node name="BugShadow" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -4.20448 )
texture = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.140305, 0.14031 )
shape = SubResource( 6 )

[node name="Hurtbox" parent="." instance=ExtResource( 14 )]
visible = false
collision_layer = 8

[node name="Stats" parent="." instance=ExtResource( 6 )]
MaxHealth = 8

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 17 )
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -0.0969274, -7.94208 )
shape = SubResource( 7 )

[node name="SoftCollision" parent="." instance=ExtResource( 2 )]
visible = false
collision_layer = 32
collision_mask = 32

[node name="WanderControl" parent="." instance=ExtResource( 8 )]
wr = 10

[node name="HurtAnimation" type="AnimationPlayer" parent="."]
pause_mode = 1
playback_process_mode = 0
anims/Start = SubResource( 8 )
anims/Stop = SubResource( 9 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( 0.176976, -0.147481 )
occluder = SubResource( 10 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
